manifest.yaml
# 2021 Manoel Galvao
# Version of Kubernetes API we are using
apiVersion: apps/v1
# This can be a statefulset, or a deployment, a deployment doenst need a hard drive that sticks around
kind: Deployment
metadata:
  # This is the name of my deployment
  name: manoel-cit270
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: manoel-cit270
  template:
    metadata:
      labels:
        app: manoel-cit270
    spec:
      containers:
        - name: manoel-cit270 
          # This is the Dockerhub url to my image
          image: manoel/cit270 
          # This is  the command to run once the container starts
          command: ["npm"]
          # These are the arguments to pass to the command when the ..
          args: ["run","start"]
          # This is the port my container is listening on, ex: 443 or...
          ports:
            - containerPort: 443
          resources:
            limits:
            # This is the max CPU (in cores) my container can use
              cpu: ".125"
            # This is the max memory (in milibytes)
              memory: "500Mi"
            requests: 
            # This is the minimum CPU (in cores) my conteiner can use
              cpu: ".1"
            # This is the minimum memory (in milibytes) 
              memory: "250Mi"
          livenessProbe:
            httpGet:
            # This is the url to call to see if my API is running
              path: /
              # This is the port to use to see if my API is running
              port: 443
              #
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
            # This is the url to call to see if my API has started
              path: /
            # This is the port to see if my APU has started
              port: 443
              #...
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3

#This is the start of a new document for the Load Balancer
---
apiVersion: v1
kind: Service
metadata:
  name: manoel-cit270-loadbalancer
spec:
  selector:
    app: manoel-cit270
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
